# unshell

./: .gitignore  README-old.md
unshell-breakout-module/: Cargo.toml  build.sh
unshell-breakout-module/src/: lib.rs
unshell-cli/: Cargo.toml  build.sh
unshell-cli/src/: main.rs
unshell-config/: Cargo.toml
unshell-crypt/: Cargo.toml
unshell-crypt/src/: aes.rs  base62.rs  lib.rs
unshell-lib/: Cargo.toml
unshell-lib/src/: announcement.rs  components.rs  lib.rs
unshell-lib/src/client/: client_runtime.rs  mod.rs
unshell-lib/src/config/: mod.rs
unshell-lib/src/logger/: macros.rs  mod.rs  pretty_logger.rs
unshell-lib/src/module/: manager.rs  mod.rs  module.rs
unshell-lib/src/server/: server_runtime.rs
unshell-logger/: Cargo.toml
unshell-logger/src/: lib.rs
unshell-module-load/: Cargo.toml
unshell-module-load/src/: main.rs  manager.rs
unshell-module-test/: Cargo.toml  build.sh
unshell-module-test/src/: lib.rs
unshell-modules/: Cargo.toml
unshell-modules/src/: callable.rs  lib.rs  manager.rs  module.rs
unshell-obfuscate/: Cargo.toml
unshell-obfuscate/src/: encrypt.rs  format_helper.rs  lib.rs
unshell-payload/: Cargo.toml  build.sh
unshell-payload/src/: main.rs
unshell-test-module/: Cargo.toml
unshell-test-module/src/: lib.rs
unshell-test-module/src/client/: client_runtime.rs  mod.rs
unshell-test-module/src/server/: mod.rs  server_runtime.rs
