cargo-features = ["trim-paths"]

[package]
name = "unshell-breakout-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["client", "server"]
client = []
server = []
obfuscate = ["unshell-obfuscate/obfuscate"]


[dependencies]
# unshell-modules = {path = "../unshell-modules"}
unshell-lib = {path = "../unshell-lib"}
unshell-obfuscate = {path = "../unshell-obfuscate"}


[profile.release]
strip = true # Strip symbols from the binary
# strip = "debuginfo"
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
debug = false
trim-paths = "all"

# crate-type = ["cdylib"]
