[package]
name = "unshell-lib"
edition = "2024"

[features]
default = ["client", "server"]

# Components
client = []
server = []

log_debug = []
obfuscate = ["unshell-obfuscate/obfuscate"]


[dependencies]
# Base dependencies
libloading = {version = "0.8.9"}
bincode = "2.0.1"
unshell-obfuscate = {path = "../unshell-obfuscate"}
chrono = "0.4.42"

serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.145"
