cargo-features = ["trim-paths"]

[package]
name = "unshell-payload"
version = "0.1.0"
edition = "2024"

[features]
obfuscate = ["unshell-obfuscate/obfuscate"]

[dependencies]
env_logger = "0.11.8"
libloading = "0.8.9"
proc-macro2 = "1.0.103"
# unshell-logger = {path = "../unshell-logger"}
unshell-lib = {path = "../unshell-lib"}
unshell-obfuscate = {path = "../unshell-obfuscate"}

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "z"  # Optimize for size
lto = true # Link tree optimization
codegen-units = 1
panic = "abort"
debug = false # Remove debug
trim-paths="all"
# panic=immediate-abort
