cargo-features = ["trim-paths"]

[package]
name = "unshell-test-module"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[features]
default = ["client-component", "server-component"]
client-component = []
server-component = []
# server = []

[profile.release]
strip = true # Strip symbols from the binary
# strip = "debuginfo"
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
debug = false
trim-paths = "all"

# crate-type = ["cdylib"]


[dependencies]
bincode = "2.0.1"
crossbeam-channel = "0.5.15"
log = "0.4.28"
unshell-modules = {path = "../unshell-modules"}
